sdk/go/auto/test/errors/compilation_error/go/main.go
//go:build !all
// +build !all

package main

import (
	"github.com/khulnasoft/codeinfra/sdk/v3/go/codeinfra"
)

func main() {
	codeinfra.Run(func(ctx *codeinfra.Context) error {
		will not compile
		return nil
	})
}
